[gd_scene load_steps=9 format=3 uid="uid://oq6kmrivkb3s"]

[ext_resource type="Script" path="res://addons/dialogue_editor_plugin/dialogue_objects/dialogue_manager.gd" id="1_05trk"]
[ext_resource type="Script" path="res://addons/dialogue_editor_plugin/dialogue_editor/dialogue_windows/intro_dialogue_window.gd" id="2_reybs"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fa1mh"]
color = Color(0.408329, 0.408329, 0.408329, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_aagdf"]
color = Color(0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_es2io"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("TransitionPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bjbtq"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(0.450625, 0.5),
"update": 0,
"values": [Color(0.0430392, 0.0430392, 0.0430392, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_g1tw0"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.318641, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tvbpd"]
_data = {
"RESET": SubResource("Animation_es2io"),
"fade_in": SubResource("Animation_bjbtq"),
"fade_out": SubResource("Animation_g1tw0")
}

[node name="DialogueManager" type="Node"]
script = ExtResource("1_05trk")
dialogue_scene_type = 1

[node name="IntroDialogueWindow" type="Control" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_reybs")

[node name="Background" type="ColorRect" parent="IntroDialogueWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="IntroDialogueWindow"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="DialogueWindow" type="MarginContainer" parent="IntroDialogueWindow/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow"]
visible = false
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer"]
layout_mode = 2

[node name="TitleText" type="RichTextLabel" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 30
text = "Title"
fit_content = true

[node name="TitleDescription" type="RichTextLabel" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description"
fit_content = true

[node name="VisibleSeparator" type="HSeparator" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_fa1mh")

[node name="InvisibleSeparator" type="HSeparator" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="MainContent" type="RichTextLabel" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut erat nec leo faucibus consequat. Cras cursus mi ornare faucibus aliquam. Praesent quis diam laoreet, malesuada purus sodales, ultrices nisl. Suspendisse potenti. Sed blandit luctus libero, ut laoreet nunc faucibus id. Nulla mi sapien, egestas et sapien sed, pellentesque rutrum lacus. Sed sit amet elementum ipsum. Fusce dictum ante vitae magna lobortis vehicula. Pellentesque ullamcorper fermentum augue. Morbi mollis ultricies arcu, a consequat tellus blandit sed. Morbi in fringilla risus. "

[node name="InvisibleSeparator2" type="HSeparator" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScrollContainer" type="ScrollContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="ChoiceContainer" type="VBoxContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Button" type="Button" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer/ScrollContainer/MarginContainer/ChoiceContainer"]
layout_mode = 2
text = "1. Button Example"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow"]
layout_mode = 2

[node name="TitleRow" type="MarginContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/TitleRow"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/TitleRow/HBoxContainer"]
layout_mode = 2
text = "Title:"

[node name="VSeparator" type="VSeparator" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/TitleRow/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_aagdf")

[node name="Label2" type="Label" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/TitleRow/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description"

[node name="MainTextRow" type="MarginContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/MainTextRow"]
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut erat nec leo faucibus consequat. Cras cursus mi ornare faucibus aliquam. Praesent quis diam laoreet, malesuada purus sodales, ultrices nisl. Suspendisse potenti. Sed blandit luctus libero, ut laoreet nunc faucibus id. Nulla mi sapien, egestas et sapien sed, pellentesque rutrum lacus. Sed sit amet elementum ipsum. Fusce dictum ante vitae magna lobortis vehicula. Pellentesque ullamcorper fermentum augue. Morbi mollis ultricies arcu, a consequat tellus blandit sed. Morbi in fringilla risus. 

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut erat nec leo faucibus consequat. Cras cursus mi ornare faucibus aliquam. Praesent quis diam laoreet, malesuada purus sodales, ultrices nisl. Suspendisse potenti. Sed blandit luctus libero, ut laoreet nunc faucibus id. Nulla mi sapien, egestas et sapien sed, pellentesque rutrum lacus. Sed sit amet elementum ipsum. Fusce dictum ante vitae magna lobortis vehicula. Pellentesque ullamcorper fermentum augue. Morbi mollis ultricies arcu, a consequat tellus blandit sed. Morbi in fringilla risus. "

[node name="ChoiceRow" type="MarginContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2

[node name="ChoiceVBox" type="VBoxContainer" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/ChoiceRow"]
layout_mode = 2

[node name="TestButton" type="Button" parent="IntroDialogueWindow/ScrollContainer/DialogueWindow/VBoxContainer2/ChoiceRow/ChoiceVBox"]
layout_mode = 2
text = "1. Example button"
flat = true
alignment = 0

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tvbpd")
}

[node name="ColorRect" type="ColorRect" parent="TransitionPlayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
